5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1646_869.log
== SUBMITION (2019-04-05 21:57:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input('Qual o valor da compra?'))
desconto = (preco*5)/100
if (preco >= 200):
	print(round(preco - desconto,2))
else:
	print(round(preco,2))
-- EXECUTION TIME:
0.158758
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:58:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = float(input('Qual o valor da compra?'))
d = (preco*5)/100
if (preco >= 200):
	print(round(p - d,2))
else:
	print(round(p,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = (preco*5)/100
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 21:58:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = float(input('Qual o valor da compra?'))
d = (preco*5)/100
if (preco >= 200):
	print(round(p - d,2))
else:
	print(round(p,2))
-- EXECUTION TIME:
0.19212
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/869/main.py", line 5, in <module>
    d = (preco*5)/100
NameError: name 'preco' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:59:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = float(input('Qual o valor da compra?'))
d = (preco*5)/100
if (preco >= 200):
	print(round(p - d,2))
else:
	print(round(p,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = (preco*5)/100
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 21:59:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p = float(input('Qual o valor da compra?'))
d = (p*5)/100
if (p >= 200):
	print(round(p - d,2))
else:
	print(round(p,2))
-- EXECUTION TIME:
0.129191
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
